--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,112 @@
 @CHARSET "UTF-8";
 
-#page-title {
-    font-family: 'Rock Salt', cursive;
+
+.main {
+    font-family: 'Raleway', sans-serif;
+    font-size: 14px;
+    padding: 15px;
 }
 
-p.page-header {
+
+/************************************** PAGE HEADER ****************************************/
+
+.header {
+  display: table;
+  width: 100%;
+  margin: 0;
+  padding: 15px 15px;
+  vertical-align: middle;
+  box-sizing: border-box;
+}
+
+.header-title {
+  display: table-cell;
+  padding: 0;
+}
+
+.page-title {
+  font-size: 40px;
+  font-family: 'Rock Salt', cursive;
+  margin: 0;
+}
+
+.page-header {
     font-family: 'Raleway', sans-serif;
+    font-size: 20px;
+    margin: 0;
+}
+
+/************************************** NAV BAR ****************************************/
+
+.main-nav {
+  display: table-cell;
+  width: 50%;
+  text-align: right;
+  vertical-align: middle;
+}
+
+.nav-wrapper {
+  display: block;
+  text-align: right;
+}
+
+ul.main-nav-links {
+  list-style-type: none;
+  display: block;
+  margin: 0;
+  padding: 0;
+  text-align: right;
+}
+
+.main-nav-links li {
+  display: inline-block;
+  text-align: right;
+  margin: 0 30px 0 0;
+}
+
+.main-nav-links a {
+  display: block;
+  text-decoration: none;
+  font-size: 18px;
+  color: #463e3e;
+  font-weight: 600;
+  text-transform: uppercase;
+  padding: 3px 0;
+}
+
+.main-nav-links a:hover {
+  display: block;
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: 600;
+  text-transform: uppercase;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+  padding: 1px 0;
+}
+
+
+/************************************** ABOUT SECTION ****************************************/
+
+
+portfolio-container {
+  margin: 40px 0;
+  width: 100%
+}
+
+.projects {
+    padding: 5px;
+    display: inline-block;
+    text-align: center;
+}
+
+.projects a {
+    color: purple;
+    text-decoration: none;
+    font-weight: 600;
+}
+
+.projects a:hover {
+    text-decoration: underline;
+    font-weight: 600;
 }
