--- a/css/main.css
+++ b/css/main.css
@@ -1,112 +1,69 @@
-@CHARSET "UTF-8";
+.ss-container:before{
+    position: absolute;
+    width: 100px;
+    background: rgba(17,17,22,0.8);
+	margin-left: 15px;
+    content: '';
+    height: 100%;
+}
 
+.page-heading {
+    font-family: 'Rock Salt', cursive;
+}
+
+.page-phrase {
+    font-family: 'Raleway', sans-serif;
+}
+
+header.masthead {
+    background: linear-gradient(0deg,#ff6a00 0,#ee8f8f 100%);
+}
+
+header.masthead .bg-circle {
+    background: linear-gradient(0deg,#ee0979 0,#f3d650 100%);
+}
+
+.btn-primary {
+    background-color: rgb(53, 53, 53);
+    border-color: rgb(53, 53, 53);
+}
+
+#verticleBar {
+    position: fixed;
+    height: 100%;
+    width: 130px;
+    background-color: black;
+    margin-left: 20px;
+    overflow-x: hidden;
+}
 
 .main {
-    font-family: 'Raleway', sans-serif;
-    font-size: 14px;
-    padding: 15px;
+    margin-left: 130px;
 }
 
 
-/************************************** PAGE HEADER ****************************************/
 
-.header {
-  display: table;
-  width: 100%;
-  margin: 0;
-  padding: 15px 15px;
-  vertical-align: middle;
-  box-sizing: border-box;
-}
+/* ANIMATION TRANSITIONS */
 
-.header-title {
-  display: table-cell;
-  padding: 0;
-}
+#firstPhoto {
+    font-weight: bold;
+    transform: translate3d(50px, -100px, -200px);
+    transition: all 1.5s ease-in-out;
+    opacity: 0;
+  }
 
-.page-title {
-  font-size: 40px;
-  font-family: 'Rock Salt', cursive;
-  margin: 0;
-}
+#firstPhoto.active {
+    transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
 
-.page-header {
-    font-family: 'Raleway', sans-serif;
-    font-size: 20px;
-    margin: 0;
-}
+#secondPhoto {
+    transition: all 1.5s ease-in-out;
+    transform: translate3d(-50px, 100px, 100px);
+    opacity: 0;
+  }
 
-/************************************** NAV BAR ****************************************/
-
-.main-nav {
-  display: table-cell;
-  width: 50%;
-  text-align: right;
-  vertical-align: middle;
-}
-
-.nav-wrapper {
-  display: block;
-  text-align: right;
-}
-
-ul.main-nav-links {
-  list-style-type: none;
-  display: block;
-  margin: 0;
-  padding: 0;
-  text-align: right;
-}
-
-.main-nav-links li {
-  display: inline-block;
-  text-align: right;
-  margin: 0 30px 0 0;
-}
-
-.main-nav-links a {
-  display: block;
-  text-decoration: none;
-  font-size: 18px;
-  color: #463e3e;
-  font-weight: 600;
-  text-transform: uppercase;
-  padding: 3px 0;
-}
-
-.main-nav-links a:hover {
-  display: block;
-  text-decoration: none;
-  font-size: 18px;
-  font-weight: 600;
-  text-transform: uppercase;
-  border-top: 2px solid black;
-  border-bottom: 2px solid black;
-  padding: 1px 0;
-}
-
-
-/************************************** ABOUT SECTION ****************************************/
-
-
-portfolio-container {
-  margin: 40px 0;
-  width: 100%
-}
-
-.projects {
-    padding: 5px;
-    display: inline-block;
-    text-align: center;
-}
-
-.projects a {
-    color: purple;
-    text-decoration: none;
-    font-weight: 600;
-}
-
-.projects a:hover {
-    text-decoration: underline;
-    font-weight: 600;
-}
+#secondPhoto.active {
+    transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
