--- a/css/main.jQuery.css
+++ b/css/main.jQuery.css
@@ -47,7 +47,6 @@ header.masthead .bg-circle {
 
 .elementAnimate {
     position: relative;
-    width: 30%;
     margin: 0% 1.33% 2.66% 1.33%;
     float: left;
   }
@@ -78,3 +77,64 @@ header.masthead .bg-circle {
     -ms-transform: translate(0px, 0px);
     transform: translate3d(0px, 0px, 0px);
   }
+
+/*  ************* ROW 1: CSS STYLING ************** */
+.flip-container:hover .flipper, .flip-container.hover .flipper {
+    transform: rotateY(180deg);
+}
+
+.flip-container, .front, .back2{
+	max-width: 100%;
+    height: 300px;
+    border-radius:.25rem;
+    vertical-align: middle;
+}
+
+.flipper {
+	transition: 0.6s;
+	transform-style: preserve-3d;
+	position: relative;
+}
+
+.front, .back2 {
+	backface-visibility: hidden;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+.front {
+	z-index: 2;
+	transform: rotateY(0deg);
+}
+
+.back2 {
+    transform: rotateY(180deg);
+    background-color: black;
+    color: white;
+}
+
+
+/* ********** ROW 2: jQuery STYLING************* */
+.flip {
+	max-width: 100%;
+    height: 300px;
+    margin: 0 auto;
+    border-radius:.25rem;
+}
+.flip img {
+	max-width: 100%;
+    height: 300px;
+}
+.flip .back {
+    background: black;
+    color: #fff;
+    text-align: center;
+}
+
+
+
+.card-img {
+    height: 300px!important;
+}
+
