--- a/css/main.css
+++ b/css/main.css
@@ -42,8 +42,7 @@ header.masthead .bg-circle {
 }
 
 
-
-/* ANIMATION TRANSITIONS */
+/* ANIMATION: JAVASCRIPT TRANSITIONS */
 
 #firstPhoto {
     font-weight: bold;
@@ -67,3 +66,112 @@ header.masthead .bg-circle {
     transform: translate3d(0, 0, 0);
     opacity: 1;
   }
+
+
+
+/* ANIMATION JQUERY TRANSITIONS */
+
+.elementAnimate {
+    position: relative;
+    margin: 0% 1.33% 2.66% 1.33%;
+    float: left;
+  }
+
+.elementAnimate.active {
+    transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
+
+
+.bounceUp {
+    opacity: 0;
+    -webkit-transition: all 700ms ease-out;
+    transition: all 700ms ease-out;
+    -webkit-transform: translate3d(0px, 200px, 0px);
+    -ms-transform: translate(0px, 200px);
+    transform: translate3d(0px, 200, 0px);
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+
+.bounceUp.active {
+    opacity: 1;
+    -moz-transform: translate3d(0px, 0px, 0px);
+    -webkit-transform: translate3d(0px, 0px, 0px);
+    -o-transform: translate(0px, 0px);
+    -ms-transform: translate(0px, 0px);
+    transform: translate3d(0px, 0px, 0px);
+  }
+
+/*  ************* ROW 1: CSS STYLING ************** */
+.flip-container:hover .flipper, .flip-container.hover .flipper {
+    transform: rotateY(180deg);
+}
+
+.flip-container, .front, .back2{
+	max-width: 100%;
+    height: 300px;
+    border-radius:.25rem;
+    vertical-align: middle;
+}
+
+.flipper {
+	transition: 0.6s;
+	transform-style: preserve-3d;
+	position: relative;
+}
+
+.front, .back2 {
+	backface-visibility: hidden;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+.front {
+	z-index: 2;
+	transform: rotateY(0deg);
+}
+
+.back2 {
+    transform: rotateY(180deg);
+    background-color: black;
+    color: white;
+}
+
+
+/* ********** ROW 2: jQuery STYLING************* */
+.flip {
+	max-width: 100%;
+    height: 300px;
+    margin: 0 auto;
+    border-radius:.25rem;
+}
+.flip img {
+	max-width: 100%;
+    height: 300px;
+}
+.flip .back {
+    background: black;
+    color: #fff;
+    text-align: center;
+}
+
+
+
+.card-img {
+    height: 300px!important;
+}
+
+.back-to-top {
+    color: white;
+    cursor: pointer;
+}
+
+.back-to-top:hover {
+    color: white;
+    cursor: pointer;
+    font-weight: 600;
+    text-decoration: none;
+}
