--- a/css/main.css
+++ b/css/main.css
@@ -51,21 +51,50 @@ header.masthead .bg-circle {
 .icon-ui {
     top: -1.3rem;
     left: 40%;
+    background: black;
+    border-radius: 100%;
+    height: 100px;
+    width: 100px;
+    color: white;
+    font-size: 2rem;
 }
 
 .icon-ux {
     top: 5rem;
     left: 2%;
+    background: black;
+    border-radius: 100%;
+    height: 100px;
+    width: 100px;
+    color: white;
+    font-size: 2rem;
 }
 
 .icon-js {
     bottom: -1.3rem;
     right: 40%;
+    background: black;
+    border-radius: 100%;
+    height: 100px;
+    width: 100px;
+    color: white;
+    font-size: 2rem;
 }
 
 .icon-vue {
     bottom: 5rem;
     right: 2%;
+    background: black;
+    border-radius: 100%;
+    height: 100px;
+    width: 100px;
+    color: white;
+    font-size: 1.5rem;
+}
+
+.xt-vue {
+    margin: 0;
+    padding: 0;
 }
 
 #firstPhoto {
