--- a/css/main.css
+++ b/css/main.css
@@ -190,19 +190,19 @@ header.masthead .bg-circle {
 
 
 /*  ************* ROW 1: CSS STYLING ************** */
-.flip-container:hover .flipper, .flip-container.hover .flipper {
+.flip-container:after .flipper, .flip-container.hover .flipper {
     transform: rotateY(180deg);
 }
 
 .flip-container, .front, .back2{
-	max-width: 100%;
+	width: 100%;
     height: 300px;
     border-radius:.25rem;
     vertical-align: middle;
 }
 
 .flipper {
-	transition: 0.6s;
+	transition: 0.8s;
 	transform-style: preserve-3d;
 	position: relative;
 }
@@ -211,12 +211,24 @@ header.masthead .bg-circle {
 	backface-visibility: hidden;
 	position: absolute;
 	top: 0;
-	left: 0;
+    left: 0;
 }
 
 .front {
 	z-index: 2;
-	transform: rotateY(0deg);
+    transform: rotateY(0deg);
+}
+
+.front>p {
+    color: white;
+    font-size: 32px;
+    margin: 0;
+    transform: translate(-50%,-50%);
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    background: black;
 }
 
 .back2 {
@@ -243,11 +255,55 @@ header.masthead .bg-circle {
     text-align: center;
 }
 
-
+/* **********  General Card Styling ************* */
 
 .card-img {
-    height: 300px!important;
+    height: 100%!important;
+    width: 100%;
+    opacity: 1;
+    transition: .5s ease;
+    backface-visibility: hidden;
 }
+
+.middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center; 
+}
+
+.front:hover .card-img {
+    opacity:0.3;
+}
+
+.container:hover .middle {
+    opacity: 1;
+}
+  
+.text {
+    color: white;
+    font-size: 16px;
+    padding: 16px 32px;
+}
+
+:checked + .button {
+    transform: rotateX(180deg);
+    -webkit-transform: rotateX(180deg);
+}
+
+/* 
+.shade {
+    height: 100%!important;
+    width: 100%;
+    background: rgba(0,0,0,0.5);
+    position: absolute;
+    top: 0;
+    left: 0;
+} */
 
 .back-to-top {
     color: white;
