--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,21 @@
-.ss-container:before{
-    position: absolute;
+p {
+    font-size: 20px;
+}
+
+.sidebar{
+    z-index: 1;
     width: 100px;
+    position: fixed;
+    padding-top: 80px;
+    top: 0;
+    bottom: 0;
+    left: 20px;
     background: rgba(17,17,22,0.8);
-	margin-left: 15px;
-    content: '';
-    height: 100%;
+    overflow-x: hidden;
+}
+
+.side-icons{
+  top: 100rem;
 }
 
 .fn_heading {
@@ -32,21 +43,12 @@ header.masthead .bg-circle {
     border-color: rgb(53, 53, 53);
 }
 
-#verticleBar {
-    position: fixed;
-    height: 100%;
-    width: 130px;
-    background-color: black;
-    margin-left: 20px;
-    overflow-x: hidden;
-}
-
 .main {
-    margin-left: 130px;
+    margin-left: 120px;
 }
 
 
-/* ANIMATION: JAVASCRIPT TRANSITIONS */
+/* CSS ANIMATION: ICON TRANSITIONS */
 
 .icon-ui {
     top: -1.3rem;
@@ -97,9 +99,11 @@ header.masthead .bg-circle {
     padding: 0;
 }
 
+
+/* JS ANIMATIONS: WHEN and WHERE */
 #firstPhoto {
-    transform: translate3d(-30px, 0, 0);
-    transition: all 1s ease-in-out;
+    transform: translate3d(-200px, 0, 0);
+    transition: all 1.3s ease-in-out;
     opacity: 0;
   }
 
@@ -109,8 +113,8 @@ header.masthead .bg-circle {
   }
 
 #secondPhoto {
+    transform: translate3d(200px, 0, 0);    
     transition: all 1s ease-in-out;
-    transform: translate3d(-100px, 100px, 100px);
     opacity: 0;
   }
 
@@ -195,14 +199,14 @@ header.masthead .bg-circle {
 }
 
 .flip-container, .front, .back2{
-	max-width: 100%;
+	width: 100%;
     height: 300px;
     border-radius:.25rem;
     vertical-align: middle;
 }
 
 .flipper {
-	transition: 0.6s;
+	transition: 0.7s;
 	transform-style: preserve-3d;
 	position: relative;
 }
@@ -245,8 +249,10 @@ header.masthead .bg-circle {
 
 
 
+/* **********  General Card Styling ************* */
 .card-img {
-    height: 300px!important;
+    height: 100%!important;
+    width: 100%;
 }
 
 .back-to-top {
